--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ jdk: oraclejdk7
 
 # Compile and package JAR and set build properties
 install: mvn package -DbuildNumber=$TRAVIS_BUILD_NUMBER -DciSystem=travis -Dcommit=${TRAVIS_COMMIT:0:7}
+script: echo "There can be only one build automator!"
 
 # Perform steps after compilation/test success
 after_success:
